--- a/main_website/main_page.css
+++ b/main_website/main_page.css
@@ -53,10 +53,7 @@ body {
     text-decoration: underline;
   }
   
-  #chart-container {
-    max-width: 40%;
-    margin-right: 20px;
-  }
+ 
   
   input[type="submit"] {
     background-color: #0077b6;
@@ -103,4 +100,43 @@ body {
   button:hover {
     background-color: #004b87;
   }
+
+  #chart-container {
+    display: flex;
+    height: 500px;
+  }
+
+  /* #chart-container {
+    max-width: 40%;
+    margin-right: 20px;
+  } */
+  
+  #myChart, #topChart {
+    margin-left: 100px;
+    height: 100%;
+    flex: 1;
+  }
+
+  h1 {
+    text-align: center;
+    margin-top: 50px;
+    font-size: 36px;
+    font-weight: bold;
+  }
+  
+  form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+  }
+  
+  label {
+    font-size: 20px;
+    font-weight: bold;
+    margin-right: 10px;
+  }
+  
+  
+
   
